--- a/layout/TrangChu.html
+++ b/layout/TrangChu.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
 
     <link rel="stylesheet" type="text/css" href="../lib/bootstrap4/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="../css/trangchu.css">
+	<link rel="stylesheet" type="text/css" href="../css/Tranghu.css">
     <link rel="stylesheet" type="text/css" href="../css/base.css">
 </head>
 
